--- a/.github/workflows/terraform_ci_cd.yaml
+++ b/.github/workflows/terraform_ci_cd.yaml
@@ -56,7 +56,7 @@ jobs:
 
       - name: Terraform Plan
         working-directory: ./${{ env.TF_DIR }}
-        run: terraform plan -input=false -out=tfplan
+        run: terraform plan -out=tfplan
 
       - name: Terraform Apply
         if: github.event_name == 'push'
