--- a/.github/workflows/terraform_ci_cd.yaml
+++ b/.github/workflows/terraform_ci_cd.yaml
@@ -56,7 +56,9 @@ jobs:
 
       - name: Terraform Plan
         working-directory: ./${{ env.TF_DIR }}
-        run: terraform plan -out=tfplan
+        run: |
+          terraform plan -input=false \
+          -var-file="../${{ env.TF_DIR }}/${{ env.TF_ENV }}.tfvars" \
 
       - name: Terraform Apply
         if: github.event_name == 'push'
