--- a/.github/workflows/terraform_ci_cd.yaml
+++ b/.github/workflows/terraform_ci_cd.yaml
@@ -52,8 +52,8 @@ jobs:
       # Terraform Init
       - name: Terraform Init
         working-directory: ./${{ env.TF_DIR }}
-        run: terraform init -reconfigure \
-              -backend-config=../../backend-config/${{ env.TF_ENV }}.hcl
+        run: terraform init -reconfigure -backend-config=../../backend-config/${{ env.TF_ENV }}.hcl
+
 
       - name: Terraform Plan
         working-directory: ./${{ env.TF_DIR }}
